tomcat/tomcat-deploy-secrets.yaml
# First create a secret:
# kubectl create secret generic tomcat-users --from-file=./tomcat-users.xml
# kubectl get secret tomcat-users -o json
# Then remove the tomcat-users.xml file from the machine

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    run: tomcat
  name: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tomcat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tomcat
    spec:
      containers:
      - image: docker.io/kalise/taas:1.7
        imagePullPolicy: IfNotPresent
        name: tomcat
        volumeMounts:
        - name: secrets
          mountPath: /opt/tomcat/conf/users
          readOnly: true
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 20
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        resources: {}
        terminationMessagePath: /dev/termination-log
      volumes:
      - name: secrets
        secret:
          secretName: tomcat-users
      dnsPolicy: ClusterFirst
      restartPolicy: Always
