tomcat/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taas
  labels:
    run: tomcat
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8080
  selector:
    run: tomcat
