tomcat/tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace:
  name: taas
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: tomcat.kube.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: taas
          servicePort: 8000
